k8s/base/auction/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction
  template:
    metadata:
      labels:
        app: auction
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: auction
          image: ghcr.io/prgrms-be-adv-devcourse/frontal-auction:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
